--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
       width: 100%;
       height: 100%;
     }
+
+    .titulo-principal {
+    text-align: center;
+   }
     
   </style>
 </head>
 <body>
+  <h1 class = "titulo-principal">Jogo dos 7 Erros</h1>
   <div id="slide-container">
     <img id="slide-image" src="https://i.imgur.com/pOAIUmv.png">
     <div id="overlay"></div>
