--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </style>
 </head>
 <body>
-  <h1 class = "titulo-principal">Jogo dos 7 Erros</h1>
+  <h1 class = "titulo-principal">Jogo dos 7 Erros Candido Portinari - Futebol (1935)</h1>
   <div id="slide-container">
     <img id="slide-image" src="https://i.imgur.com/pOAIUmv.png">
     <div id="overlay"></div>
